fixed a big. overlapping classes

--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -14,12 +14,17 @@
     align-items: center;
     justify-content: space-between;
     background-color: var(--color-lightblue);
-    ;
     padding: var(--size12);
     flex-wrap: wrap;
 }
 
 .nav-icons .links {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+}
+
+.text.links {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
